--- a/vars/main.yml
+++ b/vars/main.yml
@@ -14,6 +14,16 @@ create_files:
     mode:               '0700'
     path:               '~pi/.ssh'
     state:              'directory'
+  - owner:              'pi'
+    group:              'pi'
+    mode:               '0644'
+    state:              'touch'
+    path:               '/var/log/update_dns.log'
+  - owner:              'pi'
+    group:              'pi'
+    mode:               '0644'
+    state:              'touch'
+    path:               '/var/log/update_dns.ret'
 install_files:
   - owner:              'root'
     group:              'root'
@@ -46,15 +56,6 @@ template_files:
     mode:               '0644'
     src:                "{{ role_path }}/templates/hosts.j2"
     dest:               '/etc/hosts'
-initialize_files:
-  - owner:              'pi'
-    group:              'pi'
-    mode:               '0644'
-    dest:               '/var/log/update_dns.log'
-  - owner:              'pi'
-    group:              'pi'
-    mode:               '0644'
-    dest:               '/var/log/update_dns.ret'
 enable_services:
   - 'dnsmasq'
 start_services:
