--- a/vars/main.yml
+++ b/vars/main.yml
@@ -43,11 +43,6 @@ install_files:
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/files/conf/dnsmasq.conf"
-    dest:               '/etc/dnsmasq.conf'
-  - owner:              'root'
-    group:              'root'
-    mode:               '0644'
     src:                "{{ role_path }}/files/conf/default.dnsmasq"
     dest:               '/etc/default/dnsmasq'
 template_files:
@@ -56,6 +51,11 @@ template_files:
     mode:               '0644'
     src:                "{{ role_path }}/templates/hosts.j2"
     dest:               '/etc/hosts'
+  - owner:              'root'
+    group:              'root'
+    mode:               '0644'
+    src:                "{{ role_path }}/templates/conf/dnsmasq.conf.j2"
+    dest:               '/etc/dnsmasq.conf'
 enable_services:
   - 'dnsmasq'
 start_services:
