--- a/vars/main.yml
+++ b/vars/main.yml
@@ -38,6 +38,11 @@ install_files:
     mode:               '0644'
     src:                "{{ role_path }}/files/conf/default.dnsmasq"
     dest:               '/etc/default/dnsmasq'
+  - owner:              'root'
+    group:              'root'
+    mode:               '0644'
+    src:                "{{ role_path }}/files/conf/load_modules.d/stream.conf"
+    dest:               '/etc/nginx/load_modules.d/stream.conf'
 template_files:
   - owner:              'root'
     group:              'root'
@@ -49,9 +54,17 @@ template_files:
     mode:               '0644'
     src:                "{{ role_path }}/templates/conf/dnsmasq.conf.j2"
     dest:               '/etc/dnsmasq.conf'
+  - owner:              'root'
+    group:              'root'
+    mode:               '0644'
+    src:                "{{ role_path }}/templates/conf/dns-over-tls.conf.j2"
+    dest:               '/etc/nginx/conf.trailing.d/dns-over-tls.conf'
 enable_services:
   - 'dnsmasq'
+  - 'nginx'
 start_services:
   - 'dnsmasq'
+  - 'nginx'
 restart_services:
   - 'dnsmasq'
+  - 'nginx'
