--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -5,6 +5,7 @@
 - include:              '../tasks/create_files.yml'
 - include:              '../tasks/install_files.yml'
 - include:              '../tasks/template_files.yml'
+- include:              '../tasks/known_hosts.yml'
 - include:              '../tasks/enable_services.yml'
 - include:              '../tasks/start_services.yml'
 - include:              '../tasks/restart_services.yml'
