--- a/vars/main.yml
+++ b/vars/main.yml
@@ -53,6 +53,8 @@ template_files:
     mode:               '0644'
     src:                "{{ role_path }}/templates/conf/dns-over-tls.conf.j2"
     dest:               '/etc/nginx/conf.trailing.d/dns-over-tls.conf'
+known_hosts:
+  - "{{ groups['dns_external'][0] }}"
 enable_services:
   - 'dnsmasq'
   - 'nginx'
