--- a/vars/main.yml
+++ b/vars/main.yml
@@ -16,42 +16,57 @@ create_files:
     mode:               '0644'
     state:              'touch'
     path:               '/var/log/update_dns.ret'
+  - owner:              'root'
+    group:              'updatedns'
+    mode:               '0750'
+    state:              'directory'
+    path:               '~updatedns/.ssh'
 install_files:
   - owner:              'root'
     group:              'root'
     mode:               '0755'
-    src:                "{{ role_path }}/files/bin/update_dns_cronjob"
+    src:                "files/bin/update_dns_cronjob"
     dest:               '/usr/local/bin/update_dns_cronjob'
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/files/cron.d/update_dns"
+    src:                "files/cron.d/update_dns"
     dest:               '/etc/cron.d/update_dns'
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/files/conf/default.dnsmasq"
+    src:                "files/conf/default.dnsmasq"
     dest:               '/etc/default/dnsmasq'
+  - owner:              'root'
+    group:              'root'
+    mode:               '0644'
+    src:                "../../inventory/hosts/{{ groups['dns_internal'][0] }}/users/updatedns/files/ssh_keys/id_rsa.pub"
+    dest:               '~updatedns/.ssh/id_rsa.pub'
+  - owner:              'root'
+    group:              'updatedns'
+    mode:               '0640'
+    src:                "../../../sensitive_ansible/inventory/hosts/{{ groups['dns_internal'][0] }}/users/updatedns/files/ssh_keys/id_rsa"
+    dest:               '~updatedns/.ssh/id_rsa'
 template_files:
   - owner:              'root'
     group:              'root'
     mode:               '0755'
-    src:                "{{ role_path }}/templates/bin/update_dns.j2"
+    src:                "templates/bin/update_dns.j2"
     dest:               '/usr/local/bin/update_dns'
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/templates/hosts.j2"
+    src:                "templates/hosts.j2"
     dest:               '/etc/hosts'
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/templates/conf/dnsmasq.conf.j2"
+    src:                "templates/conf/dnsmasq.conf.j2"
     dest:               '/etc/dnsmasq.conf'
   - owner:              'root'
     group:              'root'
     mode:               '0644'
-    src:                "{{ role_path }}/templates/conf/dns-over-tls.conf.j2"
+    src:                "templates/conf/dns-over-tls.conf.j2"
     dest:               '/etc/nginx/conf.trailing.d/dns-over-tls.conf'
 known_hosts:
   - "{{ groups['dns_external'][0] }}"
