--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
-- include:              '../tasks/user_groups.yml'
-- include:              '../tasks/users.yml'
-- include:              '../tasks/install_packages.yml'
-- include:              '../tasks/create_files.yml'
-- include:              '../tasks/install_files.yml'
-- include:              '../tasks/template_files.yml'
-- include:              '../tasks/known_hosts.yml'
-- include:              '../tasks/enable_services.yml'
-- include:              '../tasks/start_services.yml'
-- include:              '../tasks/restart_services.yml'
+- include_tasks:        '../tasks/user_groups.yml'
+- include_tasks:        '../tasks/users.yml'
+- include_tasks:        '../tasks/install_packages.yml'
+- include_tasks:        '../tasks/create_files.yml'
+- include_tasks:        '../tasks/install_files.yml'
+- include_tasks:        '../tasks/template_files.yml'
+- include_tasks:        '../tasks/known_hosts.yml'
+- include_tasks:        '../tasks/enable_services.yml'
+- include_tasks:        '../tasks/start_services.yml'
+- include_tasks:        '../tasks/restart_services.yml'
   when:                 install_files_result.changed
                         or template_files_result.changed
